# cpp_base

./: .gitignore  CMakeLists.txt  cppbase.h  defer.hpp
tools/: defer.hpp  singleton.hpp  stringtool.cpp  stringtool.h
